--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="buttonUpdate">Update</string>
     <string name="editTextStudentID"></string>
     <string name="editTextEmail"></string>
+    <string name="buttonGetLocation"></string>
+    <string name="textViewCoordinate"></string>
     <!--UpdateLoanActivity -->
     <string name="buttonUpdateLoanBack_LA">Back</string>
 
@@ -144,4 +146,5 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
